# twitch-plays-wolf

./: .gitignore  README.md  pyproject.toml
src/twitch_plays_wolf/: api.py  data.py  main.py  twitch.py  wolf.py
src/twitch_plays_wolf/templates/: main_control.html
